target/main/minigo/parser/MiniGoParser.py
# Generated from main/minigo/parser/MiniGo.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", "'<='", 
                     "'>'", "'>='", "'&&'", "'||'", "'!'", "':='", "'+='", 
                     "'-='", "'*='", "'/='", "'%='", "'='", "':'", "';'", 
                     "<INVALID>", "'if'", "'else'", "'for'", "'struct'", 
                     "'interface'", "'string'", "'const'", "'var'", "'return'", 
                     "'func'", "'int'", "'type'", "'float'", "'boolean'", 
                     "'continue'", "'break'", "'range'", "'true'", "'false'", 
                     "'nil'", "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "','", "'.'", "'_'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\n'" ]

    symbolicNames = [ "<INVALID>", "SINGLE_COMMENT", "MULTI_COMMENT", "PLUS", 
                      "MINUS", "MUL", "DIV", "MOD", "EQ", "NEQ", "LT", "LE", 
                      "GT", "GE", "AND", "OR", "NOT", "ASSIGN", "ADD_ASSIGN", 
                      "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
                      "EQUAL", "COLON", "SEMICOLON", "BOOLEAN_LIT", "KW_IF", 
                      "KW_ELSE", "KW_FOR", "KW_STRUCT", "KW_INTERFACE", 
                      "KW_STRING", "KW_CONST", "KW_VAR", "KW_RETURN", "KW_FUNC", 
                      "KW_INT", "KW_TYPE", "KW_FLOAT", "KW_BOOL", "KW_CONTINUE", 
                      "KW_BREAK", "KW_RANGE", "KW_TRUE", "KW_FALSE", "KW_NIL", 
                      "IDENTIFIER", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "COMMA", "DOT", "UNDERLINE", "INTEGER_LIT", 
                      "FLOAT_LIT", "STRING_LIT", "NL", "WS", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_func_call = 0
    RULE_single_method_call = 1
    RULE_list_method_call = 2
    RULE_method_call = 3
    RULE_struct_arr_access = 4
    RULE_struct_access = 5
    RULE_arr_access = 6
    RULE_struct_arr_access_prime = 7
    RULE_arr_ele = 8
    RULE_program = 9
    RULE_list_declr = 10
    RULE_list_statement = 11
    RULE_stmt = 12
    RULE_primitive_values = 13
    RULE_primitive_types = 14
    RULE_arr_type = 15
    RULE_all_types = 16
    RULE_all_var = 17
    RULE_declr_all = 18
    RULE_assign_opp = 19
    RULE_expression = 20
    RULE_logicalOrExpr = 21
    RULE_logicalAndExpr = 22
    RULE_equalityExpr = 23
    RULE_additiveExpr = 24
    RULE_multiplicativeExpr = 25
    RULE_unaryExpr = 26
    RULE_postfixExpr = 27
    RULE_primaryExpr = 28
    RULE_var_dec = 29
    RULE_var_dec_init = 30
    RULE_var_dec_no_init = 31
    RULE_const_dec = 32
    RULE_func_dec = 33
    RULE_list_arguments = 34
    RULE_list_arg_prime = 35
    RULE_arg = 36
    RULE_arg_prime = 37
    RULE_dimension_list_in_lit = 38
    RULE_dimension_list_in_var = 39
    RULE_dimension_in_lit = 40
    RULE_dimension_in_var = 41
    RULE_arr_lit = 42
    RULE_nested_list = 43
    RULE_element_list = 44
    RULE_element = 45
    RULE_list_val = 46
    RULE_expression_prime = 47
    RULE_struct_def = 48
    RULE_list_field = 49
    RULE_field_dec = 50
    RULE_struct_lit = 51
    RULE_list_field_init = 52
    RULE_list_field_prime = 53
    RULE_field_init = 54
    RULE_struct_method_def = 55
    RULE_interface_dec = 56
    RULE_list_method = 57
    RULE_list_method_prime = 58
    RULE_method_dec = 59
    RULE_list_prototypes = 60
    RULE_list_prototypes_prime = 61
    RULE_prototype = 62
    RULE_prototype_prime = 63
    RULE_assignment = 64
    RULE_arr_assign = 65
    RULE_struct_assign = 66
    RULE_if_stmt = 67
    RULE_list_else_if_stmt = 68
    RULE_list_else_if_stmt_prime = 69
    RULE_one_esle_if_stmt = 70
    RULE_else_stmt = 71
    RULE_for_stmt = 72
    RULE_basic_for_stmt = 73
    RULE_init_for_stmt = 74
    RULE_range_for_stmt = 75
    RULE_break_stmt = 76
    RULE_continue_stmt = 77
    RULE_call_stmt = 78
    RULE_return_stmt = 79

    ruleNames =  [ "func_call", "single_method_call", "list_method_call", 
                   "method_call", "struct_arr_access", "struct_access", 
                   "arr_access", "struct_arr_access_prime", "arr_ele", "program", 
                   "list_declr", "list_statement", "stmt", "primitive_values", 
                   "primitive_types", "arr_type", "all_types", "all_var", 
                   "declr_all", "assign_opp", "expression", "logicalOrExpr", 
                   "logicalAndExpr", "equalityExpr", "additiveExpr", "multiplicativeExpr", 
                   "unaryExpr", "postfixExpr", "primaryExpr", "var_dec", 
                   "var_dec_init", "var_dec_no_init", "const_dec", "func_dec", 
                   "list_arguments", "list_arg_prime", "arg", "arg_prime", 
                   "dimension_list_in_lit", "dimension_list_in_var", "dimension_in_lit", 
                   "dimension_in_var", "arr_lit", "nested_list", "element_list", 
                   "element", "list_val", "expression_prime", "struct_def", 
                   "list_field", "field_dec", "struct_lit", "list_field_init", 
                   "list_field_prime", "field_init", "struct_method_def", 
                   "interface_dec", "list_method", "list_method_prime", 
                   "method_dec", "list_prototypes", "list_prototypes_prime", 
                   "prototype", "prototype_prime", "assignment", "arr_assign", 
                   "struct_assign", "if_stmt", "list_else_if_stmt", "list_else_if_stmt_prime", 
                   "one_esle_if_stmt", "else_stmt", "for_stmt", "basic_for_stmt", 
                   "init_for_stmt", "range_for_stmt", "break_stmt", "continue_stmt", 
                   "call_stmt", "return_stmt" ]

    EOF = Token.EOF
    SINGLE_COMMENT=1
    MULTI_COMMENT=2
    PLUS=3
    MINUS=4
    MUL=5
    DIV=6
    MOD=7
    EQ=8
    NEQ=9
    LT=10
    LE=11
    GT=12
    GE=13
    AND=14
    OR=15
    NOT=16
    ASSIGN=17
    ADD_ASSIGN=18
    SUB_ASSIGN=19
    MUL_ASSIGN=20
    DIV_ASSIGN=21
    MOD_ASSIGN=22
    EQUAL=23
    COLON=24
    SEMICOLON=25
    BOOLEAN_LIT=26
    KW_IF=27
    KW_ELSE=28
    KW_FOR=29
    KW_STRUCT=30
    KW_INTERFACE=31
    KW_STRING=32
    KW_CONST=33
    KW_VAR=34
    KW_RETURN=35
    KW_FUNC=36
    KW_INT=37
    KW_TYPE=38
    KW_FLOAT=39
    KW_BOOL=40
    KW_CONTINUE=41
    KW_BREAK=42
    KW_RANGE=43
    KW_TRUE=44
    KW_FALSE=45
    KW_NIL=46
    IDENTIFIER=47
    LPAREN=48
    RPAREN=49
    LBRACE=50
    RBRACE=51
    LBRACK=52
    RBRACK=53
    COMMA=54
    DOT=55
    UNDERLINE=56
    INTEGER_LIT=57
    FLOAT_LIT=58
    STRING_LIT=59
    NL=60
    WS=61
    ILLEGAL_ESCAPE=62
    UNCLOSE_STRING=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Func_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(MiniGoParser.LPAREN, 0)

        def list_val(self):
            return self.getTypedRuleContext(MiniGoParser.List_valContext,0)


        def RPAREN(self):
            return self.getToken(MiniGoParser.RPAREN, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_func_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_call" ):
                return visitor.visitFunc_call(self)
            else:
                return visitor.visitChildren(self)




    def func_call(self):

        localctx = MiniGoParser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_func_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(MiniGoParser.IDENTIFIER)
            self.state = 161
            self.match(MiniGoParser.LPAREN)
            self.state = 162
            self.list_val()
            self.state = 163
            self.match(MiniGoParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Single_method_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOT(self):
            return self.getToken(MiniGoParser.DOT, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(MiniGoParser.LPAREN, 0)

        def list_val(self):
            return self.getTypedRuleContext(MiniGoParser.List_valContext,0)


        def RPAREN(self):
            return self.getToken(MiniGoParser.RPAREN, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_single_method_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_method_call" ):
                return visitor.visitSingle_method_call(self)
            else:
                return visitor.visitChildren(self)




    def single_method_call(self):

        localctx = MiniGoParser.Single_method_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_single_method_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(MiniGoParser.DOT)
            self.state = 166
            self.match(MiniGoParser.IDENTIFIER)
            self.state = 167
            self.match(MiniGoParser.LPAREN)
            self.state = 168
            self.list_val()
            self.state = 169
            self.match(MiniGoParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_method_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def single_method_call(self):
            return self.getTypedRuleContext(MiniGoParser.Single_method_callContext,0)


        def list_method_call(self):
            return self.getTypedRuleContext(MiniGoParser.List_method_callContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_list_method_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_method_call" ):
                return visitor.visitList_method_call(self)
            else:
                return visitor.visitChildren(self)




    def list_method_call(self):

        localctx = MiniGoParser.List_method_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_list_method_call)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.single_method_call()
                self.state = 172
                self.list_method_call()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.single_method_call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_method_call(self):
            return self.getTypedRuleContext(MiniGoParser.List_method_callContext,0)


        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def struct_arr_access(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_arr_accessContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_method_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_call" ):
                return visitor.visitMethod_call(self)
            else:
                return visitor.visitChildren(self)




    def method_call(self):

        localctx = MiniGoParser.Method_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_method_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 177
                self.match(MiniGoParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.state = 178
                self.struct_arr_access()
                pass


            self.state = 181
            self.list_method_call()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_arr_accessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_access(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_accessContext,0)


        def arr_access(self):
            return self.getTypedRuleContext(MiniGoParser.Arr_accessContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_struct_arr_access

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_arr_access" ):
                return visitor.visitStruct_arr_access(self)
            else:
                return visitor.visitChildren(self)




    def struct_arr_access(self):

        localctx = MiniGoParser.Struct_arr_accessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_struct_arr_access)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.struct_access()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.arr_access()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_accessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_arr_access_prime(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_arr_access_primeContext,0)


        def DOT(self):
            return self.getToken(MiniGoParser.DOT, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_struct_access

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_access" ):
                return visitor.visitStruct_access(self)
            else:
                return visitor.visitChildren(self)




    def struct_access(self):

        localctx = MiniGoParser.Struct_accessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_struct_access)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.struct_arr_access_prime(0)
            self.state = 188
            self.match(MiniGoParser.DOT)
            self.state = 189
            self.match(MiniGoParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_accessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_arr_access_prime(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_arr_access_primeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_arr_access

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArr_access" ):
                return visitor.visitArr_access(self)
            else:
                return visitor.visitChildren(self)




    def arr_access(self):

        localctx = MiniGoParser.Arr_accessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arr_access)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.struct_arr_access_prime(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_arr_access_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arr_ele(self):
            return self.getTypedRuleContext(MiniGoParser.Arr_eleContext,0)


        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def struct_arr_access_prime(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_arr_access_primeContext,0)


        def DOT(self):
            return self.getToken(MiniGoParser.DOT, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_struct_arr_access_prime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_arr_access_prime" ):
                return visitor.visitStruct_arr_access_prime(self)
            else:
                return visitor.visitChildren(self)



    def struct_arr_access_prime(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniGoParser.Struct_arr_access_primeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_struct_arr_access_prime, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 194
                self.arr_ele()
                pass

            elif la_ == 2:
                self.state = 195
                self.match(MiniGoParser.IDENTIFIER)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 206
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MiniGoParser.Struct_arr_access_primeContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_struct_arr_access_prime)
                    self.state = 198
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 199
                    self.match(MiniGoParser.DOT)
                    self.state = 202
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        self.state = 200
                        self.arr_ele()
                        pass

                    elif la_ == 2:
                        self.state = 201
                        self.match(MiniGoParser.IDENTIFIER)
                        pass

             
                self.state = 208
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Arr_eleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def dimension_list_in_var(self):
            return self.getTypedRuleContext(MiniGoParser.Dimension_list_in_varContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_arr_ele

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArr_ele" ):
                return visitor.visitArr_ele(self)
            else:
                return visitor.visitChildren(self)




    def arr_ele(self):

        localctx = MiniGoParser.Arr_eleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arr_ele)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 209
            self.match(MiniGoParser.IDENTIFIER)
            self.state = 210
            self.dimension_list_in_var()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'
